[gd_scene load_steps=4 format=3 uid="uid://dmogcj4nl7qlj"]

[ext_resource type="Script" path="res://scripts/game_over_screen.gd" id="1_b16wp"]
[ext_resource type="FontFile" uid="uid://binnamcsbaeja" path="res://assets/fonts/Abaddon_Bold.ttf" id="2_d1wxf"]
[ext_resource type="FontFile" uid="uid://dqubc8i3xvgdr" path="res://assets/fonts/Abaddon_Light.ttf" id="3_6d8d3"]

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource("1_b16wp")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.0
offset_top = -140.0
offset_right = 262.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="TitleLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_d1wxf")
theme_override_font_sizes/font_size = 80
text = "Game Over"
horizontal_alignment = 1

[node name="ResultMessage" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6d8d3")
theme_override_font_sizes/font_size = 48
text = "White is Checkmated!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="PlayAgainButton" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_d1wxf")
theme_override_font_sizes/font_size = 32
text = "Play Again?"

[node name="QuitButton" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_d1wxf")
theme_override_font_sizes/font_size = 32
text = "Quit"
